{
  "version": 4,
  "terraform_version": "1.2.7",
  "serial": 693,
  "lineage": "2ca11a5e-6f51-6cc5-5188-1141b4f3d4f0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb_target_group_attachment",
      "name": "tgattachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-1:918454630947:targetgroup/tf-20230110103705642700000001/63877ee4eb0dbef4-20230112175350737400000002",
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:918454630947:targetgroup/tf-20230110103705642700000001/63877ee4eb0dbef4",
            "target_id": "i-011e01be7dd329da6"
          },
          "dependencies": [
            "aws_instance.nginx",
            "aws_lb_target_group.tg",
            "aws_security_group.front-end-sg",
            "aws_subnet.public_subnet",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05e786af422f8082a",
            "arn": "arn:aws:ec2:eu-west-1:918454630947:instance/i-011e01be7dd329da6",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-011e01be7dd329da6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0728f0ef71dc2e5c8",
            "private_dns": "ip-192-168-2-127.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.2.127",
            "public_dns": "ec2-3-250-95-147.eu-west-1.compute.amazonaws.com",
            "public_ip": "3.250.95.147",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0cb901bdd1991a84b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0e8ba21d91f77c2d2"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0abb1df83e2920dc8",
            "tags": {
              "Name": "CF-dynamic-Nginx"
            },
            "tags_all": {
              "Name": "CF-dynamic-Nginx"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e8ba21d91f77c2d2"
            ]
          },
          "dependencies": [
            "aws_security_group.front-end-sg",
            "aws_subnet.public_subnet",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:918454630947:internet-gateway/igw-0be52bedadc5e6347",
            "id": "igw-0be52bedadc5e6347",
            "owner_id": "918454630947",
            "tags": {
              "Name": "CF-dynamic"
            },
            "tags_all": {
              "Name": "CF-dynamic"
            },
            "vpc_id": "vpc-020b1a05039b9b511"
          },
          "dependencies": [
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:918454630947:loadbalancer/app/CF-dynamic-ALB/dbc6a7fb19be9e5b",
            "arn_suffix": "app/CF-dynamic-ALB/dbc6a7fb19be9e5b",
            "desync_mitigation_mode": "defensive",
            "dns_name": "CF-dynamic-ALB-630724739.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:918454630947:loadbalancer/app/CF-dynamic-ALB/dbc6a7fb19be9e5b",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "CF-dynamic-ALB",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0e8ba21d91f77c2d2"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-010cea54164379da8"
              },
              {
                "subnet_id": "subnet-0a391d8055516087e"
              },
              {
                "subnet_id": "subnet-0abb1df83e2920dc8"
              }
            ],
            "subnets": [
              "subnet-010cea54164379da8",
              "subnet-0a391d8055516087e",
              "subnet-0abb1df83e2920dc8"
            ],
            "vpc_id": "vpc-020b1a05039b9b511",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "dependencies": [
            "aws_security_group.front-end-sg",
            "aws_subnet.public_subnet",
            "aws_vpc.custom_vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:918454630947:listener/app/CF-dynamic-ALB/dbc6a7fb19be9e5b/f5d1b894135e7b25",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "Access denied",
                    "status_code": "403"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:918454630947:listener/app/CF-dynamic-ALB/dbc6a7fb19be9e5b/f5d1b894135e7b25",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:918454630947:loadbalancer/app/CF-dynamic-ALB/dbc6a7fb19be9e5b",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.lb",
            "aws_security_group.front-end-sg",
            "aws_subnet.public_subnet",
            "aws_vpc.custom_vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "secret_header_validation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:918454630947:targetgroup/tf-20230110103705642700000001/63877ee4eb0dbef4",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:918454630947:listener-rule/app/CF-dynamic-ALB/dbc6a7fb19be9e5b/f5d1b894135e7b25/569ef4ae0435518a",
            "condition": [
              {
                "host_header": [],
                "http_header": [
                  {
                    "http_header_name": "X-Secret-Header",
                    "values": [
                      "dIwBjqu6"
                    ]
                  }
                ],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:918454630947:listener-rule/app/CF-dynamic-ALB/dbc6a7fb19be9e5b/f5d1b894135e7b25/569ef4ae0435518a",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-west-1:918454630947:listener/app/CF-dynamic-ALB/dbc6a7fb19be9e5b/f5d1b894135e7b25",
            "priority": 100,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.lb",
            "aws_lb_listener.front_end",
            "aws_lb_target_group.tg",
            "aws_security_group.front-end-sg",
            "aws_subnet.public_subnet",
            "aws_vpc.custom_vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:918454630947:targetgroup/tf-20230110103705642700000001/63877ee4eb0dbef4",
            "arn_suffix": "targetgroup/tf-20230110103705642700000001/63877ee4eb0dbef4",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:918454630947:targetgroup/tf-20230110103705642700000001/63877ee4eb0dbef4",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tf-20230110103705642700000001",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-020b1a05039b9b511"
          },
          "dependencies": [
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0be52bedadc5e6347",
            "id": "r-rtb-0bca8a6570ff1c09c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0bca8a6570ff1c09c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:918454630947:route-table/rtb-0bca8a6570ff1c09c",
            "id": "rtb-0bca8a6570ff1c09c",
            "owner_id": "918454630947",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0be52bedadc5e6347",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-020b1a05039b9b511"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0462ceee8a6ee80ef",
            "route_table_id": "rtb-0bca8a6570ff1c09c",
            "subnet_id": "subnet-010cea54164379da8"
          },
          "dependencies": [
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet",
            "aws_vpc.custom_vpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0db5d11b682015932",
            "route_table_id": "rtb-0bca8a6570ff1c09c",
            "subnet_id": "subnet-0abb1df83e2920dc8"
          },
          "dependencies": [
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet",
            "aws_vpc.custom_vpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0266406d294c8b710",
            "route_table_id": "rtb-0bca8a6570ff1c09c",
            "subnet_id": "subnet-0a391d8055516087e"
          },
          "dependencies": [
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet",
            "aws_vpc.custom_vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "front-end-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:918454630947:security-group/sg-0e8ba21d91f77c2d2",
            "description": "Allow only HTTP through CloudFront",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outgoing traffics",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e8ba21d91f77c2d2",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow CloudFront IPs",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [
                  "pl-4fa04526"
                ],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "Allow inter SG traffic",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 80
              }
            ],
            "name": "front-end-sg",
            "name_prefix": "",
            "owner_id": "918454630947",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-020b1a05039b9b511"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_ALB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow inter SG traffic",
            "from_port": 80,
            "id": "sgrule-1184535260",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e8ba21d91f77c2d2",
            "security_group_rule_id": "sgr-088f30beda1862314",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.front-end-sg",
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_cloudfront",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow CloudFront IPs",
            "from_port": 80,
            "id": "sgrule-1772707182",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [
              "pl-4fa04526"
            ],
            "protocol": "tcp",
            "security_group_id": "sg-0e8ba21d91f77c2d2",
            "security_group_rule_id": "sgr-0c91d4eb1f666c231",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.front-end-sg",
            "aws_vpc.custom_vpc",
            "data.aws_ec2_managed_prefix_list.cloudfront"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:918454630947:subnet/subnet-010cea54164379da8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-010cea54164379da8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "918454630947",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "CF-dynamic-public-subnet"
            },
            "tags_all": {
              "Name": "CF-dynamic-public-subnet"
            },
            "vpc_id": "vpc-020b1a05039b9b511"
          },
          "dependencies": [
            "aws_vpc.custom_vpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:918454630947:subnet/subnet-0abb1df83e2920dc8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "192.168.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0abb1df83e2920dc8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "918454630947",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "CF-dynamic-public-subnet"
            },
            "tags_all": {
              "Name": "CF-dynamic-public-subnet"
            },
            "vpc_id": "vpc-020b1a05039b9b511"
          },
          "dependencies": [
            "aws_vpc.custom_vpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:918454630947:subnet/subnet-0a391d8055516087e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "192.168.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a391d8055516087e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "918454630947",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "CF-dynamic-public-subnet"
            },
            "tags_all": {
              "Name": "CF-dynamic-public-subnet"
            },
            "vpc_id": "vpc-020b1a05039b9b511"
          },
          "dependencies": [
            "aws_vpc.custom_vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "custom_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:918454630947:vpc/vpc-020b1a05039b9b511",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-007860fb8ae0e20db",
            "default_route_table_id": "rtb-0773d31f4ce525284",
            "default_security_group_id": "sg-0da8012719c21aeed",
            "dhcp_options_id": "dopt-0408ea2e52dd1f31f",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-020b1a05039b9b511",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0773d31f4ce525284",
            "owner_id": "918454630947",
            "tags": {
              "Name": "CF-dynamic"
            },
            "tags_all": {
              "Name": "CF-dynamic"
            }
          }
        }
      ]
    }
  ]
}